--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -824,9 +824,88 @@ body {
 .dropup .dropdown-toggle::after {
   display: none;
 }
+.cid-rkUHFjGlOp {
+  background: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.cid-rkUHFjGlOp .container-fluid {
+  padding: 0 3rem;
+}
+.cid-rkUHFjGlOp .video-block {
+  margin: auto;
+}
+@media (max-width: 767px) {
+  .cid-rkUHFjGlOp .container-fluid {
+    padding: 0 1rem;
+  }
+  .cid-rkUHFjGlOp .video-block {
+    width: 100% !important;
+  }
+}
+.cid-r1ea3IZtxR {
+  padding-top: 90px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-r1ea3IZtxR .mbr-text {
+  color: #767676;
+}
+.cid-r1ea3IZtxR .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-r1ea3IZtxR .title {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.cid-r1ea3IZtxR .title .num {
+  flex-shrink: 0;
+  position: absolute;
+  z-index: 0;
+  font-size: 4rem;
+  width: 100%;
+}
+.cid-r1ea3IZtxR .title .card-title {
+  z-index: 1;
+  width: 100%;
+}
+.cid-r1ea3IZtxR .card-text {
+  margin-top: 2rem;
+  text-align: center;
+  color: #232323;
+}
+.cid-r1ea3IZtxR .card-box {
+  margin-bottom: 1rem;
+}
+.cid-r1ea3IZtxR .num {
+  color: #efefef;
+}
+@media (max-width: 767px) {
+  .cid-r1ea3IZtxR .num,
+  .cid-r1ea3IZtxR .card-title,
+  .cid-r1ea3IZtxR .mbr-text,
+  .cid-r1ea3IZtxR .mbr-title,
+  .cid-r1ea3IZtxR .mbr-section-subtitle,
+  .cid-r1ea3IZtxR .mbr-section-btn,
+  .cid-r1ea3IZtxR .mbr-section-title {
+    text-align: center !important;
+  }
+  .cid-r1ea3IZtxR .content-column {
+    margin-bottom: 2rem;
+  }
+}
+.cid-r1ea3IZtxR .mbr-section-title {
+  text-align: center;
+  color: #4267b2;
+}
+.cid-r1ea3IZtxR .card-title,
+.cid-r1ea3IZtxR .card-img {
+  color: #4267b2;
+  text-align: center;
+}
 .cid-r14WQIxzrV {
-  padding-top: 120px;
-  padding-bottom: 45px;
+  background: linear-gradient(to right, #ffffff 0%, #ffffff 30%, #ffffff 30%, #ffffff 100%);
   overflow: hidden !important;
 }
 .cid-r14WQIxzrV .animated-element {
@@ -836,7 +915,7 @@ body {
   align-self: center;
 }
 .cid-r14WQIxzrV .mbr-section-subtitle {
-  color: #cccccc;
+  color: #194091;
 }
 @media (min-width: 992px) {
   .cid-r14WQIxzrV .img-block {
@@ -849,12 +928,15 @@ body {
   }
 }
 @media (max-width: 768px) {
+  .cid-r14WQIxzrV {
+    background: #ffffff;
+  }
   .cid-r14WQIxzrV .img-block {
     padding-bottom: 2rem;
   }
 }
 .cid-r14WQIxzrV .mbr-section-title {
-  color: #81c723;
+  color: #194091;
 }
 .cid-r14WQIxzrV .mbr-text,
 .cid-r14WQIxzrV .mbr-section-btn {
@@ -862,10 +944,10 @@ body {
 }
 .cid-r14WQIxzrV .mbr-text,
 .cid-r14WQIxzrV .mbr-section-btn B {
-  color: #efefef;
+  color: #194091;
 }
 .cid-r14WQIxzrV .mbr-section-title I {
-  color: #81c723;
+  color: #000000;
 }
 .cid-r16SSGER6l {
   padding-top: 90px;
@@ -944,83 +1026,154 @@ body {
   text-align: center;
   color: #4267b2;
 }
-.cid-r1ea3IZtxR {
+.cid-rkUGHrDP23 {
   padding-top: 90px;
-  padding-bottom: 30px;
+  padding-bottom: 90px;
+  background-color: #000000;
+}
+.cid-rkUGHrDP23 .mbr-section-subtitle {
+  color: #4267b2;
+}
+.cid-rkUGHrDP23 .mbr-section-title {
+  color: #ffffff;
+}
+.cid-rkUGHrDP23 .mbr-section-subtitle B {
+  color: #bcc2d8;
+}
+.cid-rkUJ0IQrD3 {
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-r1ea3IZtxR .mbr-text {
-  color: #767676;
+.cid-rkUJ0IQrD3 .main {
+  -webkit-flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
-.cid-r1ea3IZtxR .mbr-section-subtitle {
-  color: #767676;
+.cid-rkUJ0IQrD3 .row-element,
+.cid-rkUJ0IQrD3 .image-element {
+  padding: 0;
 }
-.cid-r1ea3IZtxR .title {
-  position: relative;
+.cid-rkUJ0IQrD3 .image-element {
   display: flex;
-  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
 }
-.cid-r1ea3IZtxR .title .num {
-  flex-shrink: 0;
-  position: absolute;
-  z-index: 0;
-  font-size: 4rem;
+.cid-rkUJ0IQrD3 .image-element img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
 }
-.cid-r1ea3IZtxR .title .card-title {
-  z-index: 1;
-  width: 100%;
+.cid-rkUJ0IQrD3 .text-content {
+  padding: 3rem;
 }
-.cid-r1ea3IZtxR .card-text {
-  margin-top: 2rem;
-  text-align: center;
-  color: #232323;
-}
-.cid-r1ea3IZtxR .card-box {
-  margin-bottom: 1rem;
-}
-.cid-r1ea3IZtxR .num {
-  color: #efefef;
+.cid-rkUJ0IQrD3 .mbr-section-subtitle {
+  color: #767676;
 }
 @media (max-width: 767px) {
-  .cid-r1ea3IZtxR .num,
-  .cid-r1ea3IZtxR .card-title,
-  .cid-r1ea3IZtxR .mbr-text,
-  .cid-r1ea3IZtxR .mbr-title,
-  .cid-r1ea3IZtxR .mbr-section-subtitle,
-  .cid-r1ea3IZtxR .mbr-section-btn,
-  .cid-r1ea3IZtxR .mbr-section-title {
+  .cid-rkUJ0IQrD3 .text-content {
+    padding: 2rem 1rem;
+  }
+  .cid-rkUJ0IQrD3 .mbr-title,
+  .cid-rkUJ0IQrD3 .underline,
+  .cid-rkUJ0IQrD3 .mbr-text,
+  .cid-rkUJ0IQrD3 .mbr-section-btn {
     text-align: center !important;
   }
-  .cid-r1ea3IZtxR .content-column {
-    margin-bottom: 2rem;
+}
+.cid-rkUJ2RUIpm {
+  padding-top: 30px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-rkUJ2RUIpm .row-element,
+.cid-rkUJ2RUIpm .image-element {
+  padding: 0;
+}
+.cid-rkUJ2RUIpm .image-element {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rkUJ2RUIpm .image-element img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+}
+.cid-rkUJ2RUIpm .text-content {
+  padding: 3rem;
+}
+@media (max-width: 767px) {
+  .cid-rkUJ2RUIpm .text-content {
+    padding: 2rem 1rem;
+  }
+  .cid-rkUJ2RUIpm .mbr-title,
+  .cid-rkUJ2RUIpm .mbr-text,
+  .cid-rkUJ2RUIpm .mbr-section-btn {
+    text-align: center !important;
   }
 }
-.cid-r1ea3IZtxR .mbr-section-title {
-  text-align: center;
-  color: #4267b2;
+.cid-rkUJ2RUIpm .mbr-text,
+.cid-rkUJ2RUIpm .mbr-section-btn {
+  color: #767676;
 }
-.cid-r1ea3IZtxR .card-title,
-.cid-r1ea3IZtxR .card-img {
-  color: #4267b2;
-  text-align: center;
+.cid-rkUJ2RUIpm .mbr-title {
+  color: #e96188;
+}
+.cid-rkUJ3LkrE9 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #fac769;
+}
+.cid-rkUJ3LkrE9 .main {
+  -webkit-flex-direction: row-reverse;
+  flex-direction: row-reverse;
+}
+.cid-rkUJ3LkrE9 .row-element,
+.cid-rkUJ3LkrE9 .image-element {
+  padding: 0;
+}
+.cid-rkUJ3LkrE9 .image-element {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rkUJ3LkrE9 .image-element img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+}
+.cid-rkUJ3LkrE9 .text-content {
+  padding: 3rem;
+}
+@media (max-width: 767px) {
+  .cid-rkUJ3LkrE9 .text-content {
+    padding: 2rem 1rem;
+  }
+  .cid-rkUJ3LkrE9 .mbr-title,
+  .cid-rkUJ3LkrE9 .underline,
+  .cid-rkUJ3LkrE9 .mbr-text,
+  .cid-rkUJ3LkrE9 .mbr-section-btn {
+    text-align: center !important;
+  }
 }
 .cid-r3g3YYyGfC {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #ffffff;
+  background-color: #000000;
 }
 .cid-r3g3YYyGfC .mbr-text {
-  color: #4267b2;
+  color: #81c723;
   text-align: center;
 }
 .cid-rkToZ6E67P {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #ffffff;
 }
 .cid-rkToZ6E67P .mbr-section-subtitle {
-  color: #767676;
+  color: #000000;
 }
 .cid-rkToZ6E67P .scroll {
   overflow-x: auto;
@@ -1045,6 +1198,9 @@ body {
 .cid-rkToZ6E67P table td {
   padding: 1.2rem 1.6rem;
   vertical-align: middle;
+}
+.cid-rkToZ6E67P table.table {
+  background: #ffffff;
 }
 .cid-rkToZ6E67P .dataTables_filter {
   text-align: right;
@@ -1112,13 +1268,16 @@ body {
 .cid-rkToZ6E67P .underline {
   color: #4267b2;
 }
+.cid-rkToZ6E67P .mbr-section-title,
+.cid-rkToZ6E67P .underline B {
+  color: #000000;
+}
 .cid-rkTqinzbMr {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #ffffff;
 }
 .cid-rkTqinzbMr .mbr-section-subtitle {
-  color: #767676;
+  color: #000000;
 }
 .cid-rkTqinzbMr .scroll {
   overflow-x: auto;
@@ -1143,6 +1302,9 @@ body {
 .cid-rkTqinzbMr table td {
   padding: 1.2rem 1.6rem;
   vertical-align: middle;
+}
+.cid-rkTqinzbMr table.table {
+  background: #ffffff;
 }
 .cid-rkTqinzbMr .dataTables_filter {
   text-align: right;
@@ -1210,13 +1372,16 @@ body {
 .cid-rkTqinzbMr .underline {
   color: #4267b2;
 }
+.cid-rkTqinzbMr .mbr-section-title,
+.cid-rkTqinzbMr .underline B {
+  color: #000000;
+}
 .cid-rkTqFI2THG {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #ffffff;
 }
 .cid-rkTqFI2THG .mbr-section-subtitle {
-  color: #767676;
+  color: #000000;
 }
 .cid-rkTqFI2THG .scroll {
   overflow-x: auto;
@@ -1241,6 +1406,9 @@ body {
 .cid-rkTqFI2THG table td {
   padding: 1.2rem 1.6rem;
   vertical-align: middle;
+}
+.cid-rkTqFI2THG table.table {
+  background: #ffffff;
 }
 .cid-rkTqFI2THG .dataTables_filter {
   text-align: right;
@@ -1307,6 +1475,10 @@ body {
 .cid-rkTqFI2THG .mbr-section-title,
 .cid-rkTqFI2THG .underline {
   color: #4267b2;
+}
+.cid-rkTqFI2THG .mbr-section-title,
+.cid-rkTqFI2THG .underline B {
+  color: #000000;
 }
 .cid-rkToohYC27 {
   padding-top: 90px;
@@ -1407,7 +1579,7 @@ body {
 .cid-rkTomaV0EX {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/alan-teo-parachute-1203x785.png");
+  background-color: #000000;
 }
 .cid-rkTomaV0EX .mbr-section-subtitle {
   color: #4267b2;
@@ -1419,8 +1591,8 @@ body {
   color: #bcc2d8;
 }
 .cid-rkSI4DzVgG {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 .cid-rkSI4DzVgG .plan-body .btn-bgr {
   z-index: 0;
@@ -1500,19 +1672,84 @@ body {
 .cid-rkSI4DzVgG .price-term {
   color: #4267b2;
 }
-.cid-rkToqFvNQL {
+.cid-r1ebSSC9Uq {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #000000;
 }
-.cid-rkToqFvNQL .mbr-section-subtitle {
-  color: #4267b2;
+.cid-r1ebSSC9Uq .mbr-section-subtitle {
+  color: #81c723;
+  font-weight: 300;
 }
-.cid-rkToqFvNQL .mbr-section-title {
+.cid-r1ebSSC9Uq .number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 3rem;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #81c723;
+}
+.cid-r1ebSSC9Uq .period {
+  display: block;
+  padding-top: 5px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  color: #81c723;
+}
+.cid-r1ebSSC9Uq .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: none;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 3rem;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #81c723;
+}
+.cid-r1ebSSC9Uq .countdown-cont {
+  max-width: 700px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-r1ebSSC9Uq .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-r1ebSSC9Uq .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-r1ebSSC9Uq .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .cid-r1ebSSC9Uq .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-r1ebSSC9Uq .number,
+  .cid-r1ebSSC9Uq .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-r1ebSSC9Uq .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-r1ebSSC9Uq H2 {
   color: #ffffff;
-}
-.cid-rkToqFvNQL .mbr-section-subtitle B {
-  color: #bcc2d8;
 }
 .cid-rkTsClYCWL .row {
   align-items: center;
@@ -1616,85 +1853,6 @@ body {
 }
 .cid-rkTsClYCWL .mbr-section-subtitle B {
   color: #81c723;
-}
-.cid-r1ebSSC9Uq {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-r1ebSSC9Uq .mbr-section-subtitle {
-  color: #4267b2;
-  font-weight: 300;
-}
-.cid-r1ebSSC9Uq .number {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 3rem;
-  text-transform: none;
-  letter-spacing: -2px;
-  word-spacing: 0;
-  line-height: 1.3;
-  color: #4267b2;
-}
-.cid-r1ebSSC9Uq .period {
-  display: block;
-  padding-top: 5px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-  color: #4267b2;
-}
-.cid-r1ebSSC9Uq .dot {
-  position: absolute;
-  top: -10px;
-  right: -1em;
-  width: 1em;
-  display: none;
-  height: 83%;
-  overflow: hidden;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 3rem;
-  line-height: 89.65px;
-  text-transform: none;
-  letter-spacing: 0;
-  word-spacing: 0;
-  color: #4267b2;
-}
-.cid-r1ebSSC9Uq .countdown-cont {
-  max-width: 700px;
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-r1ebSSC9Uq .dot {
-    display: none;
-  }
-}
-@media (max-width: 543px) {
-  .cid-r1ebSSC9Uq .number-wrap {
-    margin-bottom: 15px;
-  }
-}
-@media (max-width: 550px) {
-  .cid-r1ebSSC9Uq .col-xs-3 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .cid-r1ebSSC9Uq .number-wrap {
-    min-width: auto;
-  }
-}
-@media (max-width: 440px) {
-  .cid-r1ebSSC9Uq .number,
-  .cid-r1ebSSC9Uq .dot {
-    font-size: 40px;
-  }
-}
-@media (max-width: 380px) {
-  .cid-r1ebSSC9Uq .period {
-    font-size: 0.8rem;
-  }
-}
-.cid-r1ebSSC9Uq H2 {
-  color: #4267b2;
 }
 .cid-r16VK07H3S {
   padding-top: 60px;
